<resources>
    <string name="app_name">TP2Graphes</string>
    <string name="modifierEtiquette">Modifier l\'étiquette</string>
    <string name="modifierTaille">Modifier la taille</string>
    <string name="modifierCouleur">Modifier la couleur</string>
    <string name="supprimerNoeud">Supprimer le noeud</string>
    <string name="modeModifier">Mode de modification</string>
    <string name="modeCreationArc">Mode de création arc</string>
    <string name="modeCreationNoeud">Mode de création noeud</string>
    <string name="modeDeplacementNoeuds">Mode de déplacements des noeuds</string>
    <string name="modifierCouleurArc">Modifier la couleur de l\'arc</string>
    <string name="supprimerArc">Supprimer l\'arc</string>
    <string name="modifierTailleEtiquetteArc">Modifier la taille de l\'etiquette</string>
    <string name="modifierEtiquetteArc">Modifier l\'etiquette l\'arc</string>
    <string name="modifierLargeurArc">Modifier la largeur l\'arc</string>
    <string name="modeCourbure">Modifier la courbure de l\'arc</string>
    <string-array name="color_arrays">
        <item>Rouge</item>
        <item>Vert</item>
        <item>Bleu</item>
        <item>Orange</item>
        <item>Cyan</item>
        <item>Magenta</item>
        <item>Noir</item>
    </string-array>
</resources>
