<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <item android:id="@+id/supprimerArc"
        android:title="@string/supprimerArc"
        android:orderInCategory="100"
        />

    <item android:id="@+id/modifierTailleEtiquette"
        android:title="@string/modifierTailleEtiquetteArc"
        android:orderInCategory="200"
        />

    <item android:id="@+id/modifierCouleurArc"
        android:title="@string/modifierCouleurArc"
        android:orderInCategory="300"
        />
    <item android:id="@+id/modifierEtiquetteArc"
        android:title="@string/modifierEtiquetteArc"
        android:orderInCategory="400"
        />
    <item android:id="@+id/modifierLargeurArc"
        android:title="@string/modifierLargeurArc"
        android:orderInCategory="500"
        />
</menu>